crates/ink/tests/ui/selector_id/fail/invalid_parameter_type_01.rs
const _: u32 = ink::selector_id!(true);

fn main() {}
