crates/ink/tests/ui/selector_id/fail/invalid_parameter_type_01.stderr
error: expected string or byte string literal as input. found Bool(LitBool { value: true })
 --> tests/ui/selector_id/fail/invalid_parameter_type_01.rs:1:34
  |
1 | const _: u32 = ink::selector_id!(true);
  |                                  ^^^^
